<resources>
    <string name="app_name" translatable="false">Simplest Notes</string>
    <string name="enter_note">Write your note here…</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="save">Save</string>
    <string name="empty_note_toast">Please, enter some text for your note</string>
    <string name="error_loading_notes">Error loading notes</string>
    <string name="note_deleted">Note deleted</string>
    <string name="undo">Undo</string>
    <string name="error_adding_a_note">Error adding a note</string>
    <string name="note_added">Note added</string>
    <string name="add_new_note_button_label">add new note</string>
    <string name="priority">Priority:</string>
    <string name="draft_new_note" translatable="false">draft_new_note</string>
    <string name="draft_note" translatable="false">draft_note_</string>
    <string name="note_id" translatable="false">note_id</string>
    <string name="text" translatable="false">_text</string>
    <string name="priority_draft" translatable="false">_priority</string>
    <string name="donate_qr_code">Support development 😊</string>
    <string name="support_the_app">Support development 😊 Scan or tap to donate.</string>
    <string name="donate_link" translatable="false">https://boosty.to/trase1/donate</string>
</resources>